--- a/hazara_180925.ipynb
+++ b/hazara_180925.ipynb
@@ -252,7 +252,10 @@
     "# 8 print the avg grades of Bob\n",
     "# 9 print the entire avg of all of the df\n",
     "# A print the df with only grades of Math Bioligy\n",
+    "\n",
+    "# --- later\n",
     "# B print all students and their grades for students that got Math > 80\n",
+    "# C add column 'Excellent' , put V in this column for students with avg > 80 and X for others, using apply (row)\n",
     "\n"
    ]
   }
