--- a/hazara_180925.ipynb
+++ b/hazara_180925.ipynb
@@ -249,9 +249,10 @@
     "# 5 print min grade of Bioligy\n",
     "# 6 print the avg of Physics\n",
     "# 7 print all grades of Bob\n",
-    "# 8 print the avg grades of Bob\n",
+    "# 8 print the avg grades of Bob using loc\n",
     "# 9 print the entire avg of all of the df\n",
     "# A print the df with only grades of Math Bioligy\n",
+    "# B print the last student using iloc\n",
     "\n",
     "# --- later\n",
     "# B print all students and their grades for students that got Math > 80\n",
