--- a/hazara_180925.ipynb
+++ b/hazara_180925.ipynb
@@ -255,8 +255,10 @@
     "# B print the last student using iloc\n",
     "\n",
     "# --- later\n",
-    "# B print all students and their grades for students that got Math > 80\n",
-    "# C add column 'Excellent' , put V in this column for students with avg > 80 and X for others, using apply (row)\n",
+    "# B create column 'min-grade' and populate the min grade of each student, using apply (row)\n",
+    "# C create column 'avg-grade' and populate the avg grade of each student, using apply (row)\n",
+    "# D print all students and their grades for students that got Math > 80\n",
+    "# E add column 'Excellent' , put V in this column for students with avg > 80 and X for others, using apply (row)\n",
     "\n"
    ]
   }
