--- a/hazara_180925.ipynb
+++ b/hazara_180925.ipynb
@@ -254,12 +254,12 @@
     "# A print the df with only grades of Math Bioligy\n",
     "# B print the last student using iloc\n",
     "\n",
-    "# --- later\n",
-    "# B print all students and their grades for students that got Math > 80\n",
-    "# C add column 'math-genie' if the student math grade is bigger than 90 write 'genie' otherwise write 'human'\n",
-    "# D create column 'min-grade' and populate the min grade of each student, using apply (row)\n",
-    "# E create column 'avg-grade' and populate the avg grade of each student, using apply (row)\n",
-    "# F add column 'Excellent' , put V in this column for students with avg > 80 and X for others, using apply (row)\n",
+    "# --- later........\n",
+    "# C print all students and their grades for students that got Math > 80\n",
+    "# D add column 'math-genie' if the student math grade is bigger than 90 write 'genie' otherwise write 'human', using apply (column)\n",
+    "# E create column 'min-grade' and populate the min grade of each student, using apply (row)\n",
+    "# F create column 'avg-grade' and populate the avg grade of each student, using apply (row)\n",
+    "# G add column 'Excellent' , put V in this column for students with avg > 80 and X for others, using apply (row)\n",
     "\n"
    ]
   }
