--- a/hazara_180925.ipynb
+++ b/hazara_180925.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "9c70d7ec-a089-48b0-87ee-fbbfff7381ec",
    "metadata": {},
    "outputs": [
@@ -178,49 +178,118 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Jan</th>\n",
-       "      <th>Feb</th>\n",
-       "      <th>Mar</th>\n",
+       "      <th>Physics</th>\n",
+       "      <th>Math</th>\n",
+       "      <th>Chemistry</th>\n",
+       "      <th>Biology</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>CA</th>\n",
-       "      <td>8</td>\n",
+       "      <th>Alice</th>\n",
+       "      <td>61</td>\n",
        "      <td>24</td>\n",
-       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NY</th>\n",
-       "      <td>87</td>\n",
-       "      <td>79</td>\n",
-       "      <td>48</td>\n",
+       "      <th>Bob</th>\n",
+       "      <td>30</td>\n",
+       "      <td>92</td>\n",
+       "      <td>96</td>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>AZ</th>\n",
-       "      <td>10</td>\n",
-       "      <td>94</td>\n",
-       "      <td>52</td>\n",
+       "      <th>Martin</th>\n",
+       "      <td>84</td>\n",
+       "      <td>97</td>\n",
+       "      <td>33</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>TX</th>\n",
-       "      <td>98</td>\n",
-       "      <td>53</td>\n",
-       "      <td>66</td>\n",
+       "      <th>Shi</th>\n",
+       "      <td>31</td>\n",
+       "      <td>62</td>\n",
+       "      <td>11</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dvir</th>\n",
+       "      <td>39</td>\n",
+       "      <td>47</td>\n",
+       "      <td>11</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shlomo</th>\n",
+       "      <td>69</td>\n",
+       "      <td>30</td>\n",
+       "      <td>42</td>\n",
+       "      <td>85</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Jan  Feb  Mar\n",
-       "CA    8   24   67\n",
-       "NY   87   79   48\n",
-       "AZ   10   94   52\n",
-       "TX   98   53   66"
+       "        Physics  Math  Chemistry  Biology\n",
+       "Alice        61    24         81       70\n",
+       "Bob          30    92         96       84\n",
+       "Martin       84    97         33       12\n",
+       "Shi          31    62         11       97\n",
+       "Dvir         39    47         11       73\n",
+       "Shlomo       69    30         42       85"
       ]
      },
-     "execution_count": 13,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Math column:\n",
+      " Alice     24\n",
+      "Bob       92\n",
+      "Martin    97\n",
+      "Shi       62\n",
+      "Dvir      47\n",
+      "Shlomo    30\n",
+      "Name: Math, dtype: int32\n",
+      "Max Chemistry grade: 96\n",
+      "Min Biology grade: 12\n",
+      "Average Physics grade: 63.833333333333336\n",
+      "Bob's grades:\n",
+      " Physics      30\n",
+      "Math         92\n",
+      "Chemistry    96\n",
+      "Biology      84\n",
+      "Name: Bob, dtype: int32\n",
+      "Bob's average grade: 75.5\n",
+      "Overall average grade: 59.583333333333336\n",
+      "Math & Biology only:\n",
+      "         Math  Biology\n",
+      "Alice     24       70\n",
+      "Bob       92       84\n",
+      "Martin    97       12\n",
+      "Shi       62       97\n",
+      "Dvir      47       73\n",
+      "Shlomo    30       85\n",
+      "Last student (row):\n",
+      " Physics      69\n",
+      "Math         30\n",
+      "Chemistry    42\n",
+      "Biology      85\n",
+      "Name: Shlomo, dtype: int32\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,12 +323,100 @@
     "# A print the df with only grades of Math Bioligy\n",
     "# B print the last student using iloc\n",
     "\n",
-    "# --- later........\n",
+    "\n",
+    "# 1) create grades df\n",
+    "np.random.seed(42)\n",
+    "students = [\"Alice\", \"Bob\", \"Martin\", \"Shi\", \"Dvir\", \"Shlomo\"]\n",
+    "cols = [\"Physics\", \"Math\", \"Chemistry\", \"Biology\"]\n",
+    "data = np.random.randint(10, 101, size=(len(students), len(cols)))\n",
+    "df = pd.DataFrame(data, index=students, columns=cols)\n",
+    "\n",
+    "\n",
+    "display(df)\n",
+    "\n",
+    "# 2) change Shi grade in Physics to 100 using .at\n",
+    "df.at[\"Shi\", \"Physics\"] = 100\n",
+    "\n",
+    "# 3) print all Math column\n",
+    "print(\"Math column:\\n\", df[\"Math\"])\n",
+    "\n",
+    "# 4) print max grade of Chemistry\n",
+    "print(\"Max Chemistry grade:\", df[\"Chemistry\"].max())\n",
+    "\n",
+    "# 5) print min grade of Biology\n",
+    "print(\"Min Biology grade:\", df[\"Biology\"].min())\n",
+    "\n",
+    "# 6) print the avg of Physics\n",
+    "print(\"Average Physics grade:\", df[\"Physics\"].mean())\n",
+    "\n",
+    "# 7) print all grades of Bob\n",
+    "print(\"Bob's grades:\\n\", df.loc[\"Bob\"])\n",
+    "\n",
+    "# 8) print the avg grades of Bob using loc\n",
+    "print(\"Bob's average grade:\", df.loc[\"Bob\"].mean())\n",
+    "\n",
+    "# 9) print the entire avg of all of the df\n",
+    "print(\"Overall average grade:\", df.values.mean())\n",
+    "\n",
+    "# A) print the df with only grades of Math & Biology\n",
+    "print(\"Math & Biology only:\\n\", df[[\"Math\", \"Biology\"]])\n",
+    "\n",
+    "# B) print the last student using iloc\n",
+    "print(\"Last student (row):\\n\", df.iloc[-1])\n",
+    "\n",
+    "type(df.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "408f76d5-5354-40c3-bf6d-f340b6c555c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "'''\n",
+    "df[ df['age'] > 30 ]\n",
+    "\n",
+    "df[ (df['age'] > 25) & (df['age'] < 35) ]\n",
+    "\n",
+    "df[ (df['age'] < 28) | (df['name'] == 'Diana') ]\n",
+    "\n",
+    "df[ ~(df['age'] == 33)]\n",
+    "\n",
+    "df[ df['age'].between(28, 35) ]\n",
+    "\n",
+    "df[ df['name'].isin(['Alice', 'Diana']) ]\n",
+    "\n",
+    "df['ip_perc'] = 100 * df['tip'] / df['total_bill']  # the operation is 1 liner\n",
+    "\n",
+    "--- apply column\n",
+    "def last4(cc):\n",
+    "    return cc[-4:]\n",
+    "\n",
+    "df['CC-last4'] = df['CC Number'].apply(last4)  # the operation is more than 1 line ...\n",
+    "\n",
+    "# lambda shortcut\n",
+    "df['CC-last4'] = df['CC Number'].apply(lambda cc: cc[-4:])\n",
+    "\n",
+    "--- apply row\n",
+    "def get_generous(row):\n",
+    "    tip_perc = 100 * row['tip'] / row['total_bill']\n",
+    "    if tip_perc >= 25:\n",
+    "        return 'Generous'\n",
+    "    else:\n",
+    "        return 'Not-Generous'\n",
+    "\n",
+    "df['Description'] = df.apply(get_generous, axis=1)  # axis=1 so the row will be sent \n",
+    "\n",
+    "'''\n",
+    "\n",
     "# C print all students and their grades for students that got Math > 80\n",
-    "# D add column 'math-genie' if the student math grade is bigger than 90 write 'genie' otherwise write 'human', using apply (column)\n",
-    "# E create column 'min-grade' and populate the min grade of each student, using apply (row)\n",
-    "# F create column 'avg-grade' and populate the avg grade of each student, using apply (row)\n",
-    "# G add column 'Excellent' , put V in this column for students with avg > 80 and X for others, using apply (row)\n",
+    "# D update the math score to be 10% more \n",
+    "# E add column 'math-genie' if the student math grade is bigger than 90 write 'genie' otherwise write 'human', using apply (column)\n",
+    "# F create column 'min-grade' and populate the min grade of each student, using apply (row)\n",
+    "# G create column 'avg-grade' and populate the avg grade of each student, using apply (row)\n",
+    "# H add column 'Excellent' , put V in this column for students with avg > 80 and X for others, using apply (row)\n",
     "\n"
    ]
   }
