--- a/hazara_180925.ipynb
+++ b/hazara_180925.ipynb
@@ -369,10 +369,308 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "408f76d5-5354-40c3-bf6d-f340b6c555c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Physics</th>\n",
+       "      <th>Math</th>\n",
+       "      <th>Chemistry</th>\n",
+       "      <th>Biology</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alice</th>\n",
+       "      <td>98</td>\n",
+       "      <td>88</td>\n",
+       "      <td>74</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bob</th>\n",
+       "      <td>80</td>\n",
+       "      <td>98</td>\n",
+       "      <td>78</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Martin</th>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>83</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shi</th>\n",
+       "      <td>99</td>\n",
+       "      <td>83</td>\n",
+       "      <td>62</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dvir</th>\n",
+       "      <td>61</td>\n",
+       "      <td>83</td>\n",
+       "      <td>89</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shlomo</th>\n",
+       "      <td>61</td>\n",
+       "      <td>80</td>\n",
+       "      <td>92</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Physics  Math  Chemistry  Biology\n",
+       "Alice        98    88         74       67\n",
+       "Bob          80    98         78       82\n",
+       "Martin       70    70         83       95\n",
+       "Shi          99    83         62       81\n",
+       "Dvir         61    83         89       97\n",
+       "Shlomo       61    80         92       71"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "math > 80:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Physics</th>\n",
+       "      <th>Math</th>\n",
+       "      <th>Chemistry</th>\n",
+       "      <th>Biology</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alice</th>\n",
+       "      <td>98</td>\n",
+       "      <td>88</td>\n",
+       "      <td>74</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bob</th>\n",
+       "      <td>80</td>\n",
+       "      <td>98</td>\n",
+       "      <td>78</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shi</th>\n",
+       "      <td>99</td>\n",
+       "      <td>83</td>\n",
+       "      <td>62</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dvir</th>\n",
+       "      <td>61</td>\n",
+       "      <td>83</td>\n",
+       "      <td>89</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Physics  Math  Chemistry  Biology\n",
+       "Alice       98    88         74       67\n",
+       "Bob         80    98         78       82\n",
+       "Shi         99    83         62       81\n",
+       "Dvir        61    83         89       97"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D update the math score to be 10% more \n",
+      "# E add column \"math-genie\" if the student\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Physics</th>\n",
+       "      <th>Math</th>\n",
+       "      <th>Chemistry</th>\n",
+       "      <th>Biology</th>\n",
+       "      <th>Math-Genie</th>\n",
+       "      <th>Min-Grade</th>\n",
+       "      <th>Avg-Grade</th>\n",
+       "      <th>Excellent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alice</th>\n",
+       "      <td>98</td>\n",
+       "      <td>96.8</td>\n",
+       "      <td>74</td>\n",
+       "      <td>67</td>\n",
+       "      <td>math-genie</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>83.950</td>\n",
+       "      <td>V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bob</th>\n",
+       "      <td>80</td>\n",
+       "      <td>107.8</td>\n",
+       "      <td>78</td>\n",
+       "      <td>82</td>\n",
+       "      <td>math-genie</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>86.950</td>\n",
+       "      <td>V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Martin</th>\n",
+       "      <td>70</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>83</td>\n",
+       "      <td>95</td>\n",
+       "      <td>human</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>81.250</td>\n",
+       "      <td>V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shi</th>\n",
+       "      <td>99</td>\n",
+       "      <td>91.3</td>\n",
+       "      <td>62</td>\n",
+       "      <td>81</td>\n",
+       "      <td>math-genie</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>83.325</td>\n",
+       "      <td>V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dvir</th>\n",
+       "      <td>61</td>\n",
+       "      <td>91.3</td>\n",
+       "      <td>89</td>\n",
+       "      <td>97</td>\n",
+       "      <td>math-genie</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>84.575</td>\n",
+       "      <td>V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shlomo</th>\n",
+       "      <td>61</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>92</td>\n",
+       "      <td>71</td>\n",
+       "      <td>math-genie</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>78.000</td>\n",
+       "      <td>X</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Physics   Math  Chemistry  Biology  Math-Genie  Min-Grade  Avg-Grade  \\\n",
+       "Alice        98   96.8         74       67  math-genie       67.0     83.950   \n",
+       "Bob          80  107.8         78       82  math-genie       78.0     86.950   \n",
+       "Martin       70   77.0         83       95       human       70.0     81.250   \n",
+       "Shi          99   91.3         62       81  math-genie       62.0     83.325   \n",
+       "Dvir         61   91.3         89       97  math-genie       61.0     84.575   \n",
+       "Shlomo       61   88.0         92       71  math-genie       61.0     78.000   \n",
+       "\n",
+       "       Excellent  \n",
+       "Alice          V  \n",
+       "Bob            V  \n",
+       "Martin         V  \n",
+       "Shi            V  \n",
+       "Dvir           V  \n",
+       "Shlomo         X  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "'''\n",
@@ -417,7 +715,210 @@
     "# F create column 'min-grade' and populate the min grade of each student, using apply (row)\n",
     "# G create column 'avg-grade' and populate the avg grade of each student, using apply (row)\n",
     "# H add column 'Excellent' , put V in this column for students with avg > 80 and X for others, using apply (row)\n",
-    "\n"
+    "\n",
+    "np.random.seed(42)\n",
+    "students = [\"Alice\", \"Bob\", \"Martin\", \"Shi\", \"Dvir\", \"Shlomo\"]\n",
+    "cols = [\"Physics\", \"Math\", \"Chemistry\", \"Biology\"]\n",
+    "data = np.random.randint(60, 101, size=(len(students), len(cols)))\n",
+    "df = pd.DataFrame(data, index=students, columns=cols)\n",
+    "\n",
+    "display(df)\n",
+    "\n",
+    "# C print all students and their grades for students that got Math > 80\n",
+    "print('math > 80:')\n",
+    "display(df[ df['Math'] > 80 ])\n",
+    "\n",
+    "# D update the math score to be 10% more \n",
+    "print('D update the math score to be 10% more ')\n",
+    "df['Math'] = df['Math'] * 1.1\n",
+    "\n",
+    "# E add column 'math-genie' if the student math grade is bigger than 90 write 'genie' otherwise write 'human', using apply (column)\n",
+    "print('# E add column \"math-genie\" if the student')\n",
+    "def get_status(grade):\n",
+    "    return \"math-genie\" if grade > 80 else \"human\"\n",
+    "\n",
+    "df['Math-Genie'] = df['Math'].apply(get_status)\n",
+    "df['Math-Genie'] = df['Math'].apply(lambda grade: \"math-genie\" if grade > 80 else \"human\")\n",
+    "\n",
+    "# F create column 'min-grade' and populate the min grade of each student, using apply (row)\n",
+    "def get_min(row):\n",
+    "    return row.min()\n",
+    "\n",
+    "df['Min-Grade'] = df.select_dtypes(include=\"number\").apply(get_min, axis=1)\n",
+    "df['Min-Grade'] = df.select_dtypes(include=\"number\").min(axis=1)\n",
+    "\n",
+    "# G create column 'avg-grade' and populate the avg grade of each student, using apply (row)\n",
+    "def get_avg(row):\n",
+    "    return row.mean()\n",
+    "\n",
+    "df['Avg-Grade'] = df.select_dtypes(include=\"number\").drop(columns='Min-Grade').apply(get_avg, axis=1)\n",
+    "df['Avg-Grade'] = df.select_dtypes(include=\"number\").drop(columns='Min-Grade').select_dtypes(include=\"number\").mean(axis=1)\n",
+    "\n",
+    "# H add column 'Excellent' , put V in this column for students with avg > 80 and X for others, using apply (row)\n",
+    "def get_desc(row):\n",
+    "    if row.mean() > 80:\n",
+    "        return 'V'\n",
+    "    else:\n",
+    "        return 'X'\n",
+    "\n",
+    "\n",
+    "df['Excellent'] = df.select_dtypes(include=\"number\").drop(columns='Min-Grade').apply(get_desc, axis=1)\n",
+    "\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "9296cf78-3cb8-4795-8696-9aa294994c3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Physics</th>\n",
+       "      <th>Math</th>\n",
+       "      <th>Chemistry</th>\n",
+       "      <th>Biology</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alice</th>\n",
+       "      <td>98</td>\n",
+       "      <td>88</td>\n",
+       "      <td>74</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bob</th>\n",
+       "      <td>80</td>\n",
+       "      <td>98</td>\n",
+       "      <td>78</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Martin</th>\n",
+       "      <td>70</td>\n",
+       "      <td>70</td>\n",
+       "      <td>83</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shi</th>\n",
+       "      <td>99</td>\n",
+       "      <td>83</td>\n",
+       "      <td>62</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dvir</th>\n",
+       "      <td>61</td>\n",
+       "      <td>83</td>\n",
+       "      <td>89</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shlomo</th>\n",
+       "      <td>61</td>\n",
+       "      <td>80</td>\n",
+       "      <td>92</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Physics  Math  Chemistry  Biology\n",
+       "Alice        98    88         74       67\n",
+       "Bob          80    98         78       82\n",
+       "Martin       70    70         83       95\n",
+       "Shi          99    83         62       81\n",
+       "Dvir         61    83         89       97\n",
+       "Shlomo       61    80         92       71"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "students = [\"Alice\", \"Bob\", \"Martin\", \"Shi\", \"Dvir\", \"Shlomo\"]\n",
+    "cols = [\"Physics\", \"Math\", \"Chemistry\", \"Biology\"]\n",
+    "data = np.random.randint(60, 101, size=(len(students), len(cols)))\n",
+    "df = pd.DataFrame(data, index=students, columns=cols)\n",
+    "\n",
+    "df\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "df = df.drop(0, axis=0)  # row by index\n",
+    "df = df.drop('age_squared', axis=1)  # column\n",
+    "\n",
+    "######################## concat row\n",
+    "# First DataFrame\n",
+    "df1 = pd.DataFrame({\n",
+    "    \"A\": [1, 2, 3],\n",
+    "    \"B\": [4, 5, 6]\n",
+    "})\n",
+    "\n",
+    "# Second DataFrame\n",
+    "df2 = pd.DataFrame({\n",
+    "    \"A\": [7, 8, 9],\n",
+    "    \"B\": [10, 11, 12]\n",
+    "})\n",
+    "\n",
+    "# Concatenate by rows (axis=0)\n",
+    "result = pd.concat([df1, df2], axis=0, ignore_index=False)\n",
+    "\n",
+    "######################## concat column\n",
+    "\n",
+    "# First DataFrame\n",
+    "df1 = pd.DataFrame({\n",
+    "    \"A\": [1, 2, 3],\n",
+    "    \"B\": [4, 5, 6]\n",
+    "})\n",
+    "\n",
+    "# Second DataFrame\n",
+    "df2 = pd.DataFrame({\n",
+    "    \"C\": [\"x\", \"y\", \"z\"],\n",
+    "    \"D\": [\"p\", \"q\", \"r\"]\n",
+    "})\n",
+    "\n",
+    "# Concatenate by column (axis=1)\n",
+    "result = pd.concat([df1, df2], axis=1)\n",
+    "\n",
+    "### Replace row with .loc\n",
+    "df.loc['danny'] = ['Bobby', 32]  \n",
+    "\n",
+    "1 drop column Math (just print, dont actually remove)\n",
+    "2 drop row 'Bob'\n",
+    "3 add new row : Motti  Physics[91]\tMath[88]\tChemistry[70]\tBiology[98] -- using concat\n",
+    "4 add new column city: Tel-aviv, Rishon, Nes-zyiona, Kfar-tavot, Tel-aviv, Herzelliya, Beer-sheva\n",
+    "5 replace grades for Martin to: 80, 56, 99, 100, 'Dimona'\n",
+    "\n",
+    "'''"
    ]
   }
  ],
