--- a/hazara_180925.ipynb
+++ b/hazara_180925.ipynb
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "id": "9296cf78-3cb8-4795-8696-9aa294994c3c",
    "metadata": {},
    "outputs": [
@@ -798,6 +798,7 @@
        "      <th>Math</th>\n",
        "      <th>Chemistry</th>\n",
        "      <th>Biology</th>\n",
+       "      <th>City</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -807,6 +808,7 @@
        "      <td>88</td>\n",
        "      <td>74</td>\n",
        "      <td>67</td>\n",
+       "      <td>Tel-aviv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Bob</th>\n",
@@ -814,13 +816,15 @@
        "      <td>98</td>\n",
        "      <td>78</td>\n",
        "      <td>82</td>\n",
+       "      <td>Rishon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Martin</th>\n",
-       "      <td>70</td>\n",
-       "      <td>70</td>\n",
-       "      <td>83</td>\n",
-       "      <td>95</td>\n",
+       "      <td>80</td>\n",
+       "      <td>56</td>\n",
+       "      <td>99</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Dimona</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shi</th>\n",
@@ -828,6 +832,7 @@
        "      <td>83</td>\n",
        "      <td>62</td>\n",
        "      <td>81</td>\n",
+       "      <td>Kfar-tavot</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Dvir</th>\n",
@@ -835,6 +840,7 @@
        "      <td>83</td>\n",
        "      <td>89</td>\n",
        "      <td>97</td>\n",
+       "      <td>Tel-aviv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shlomo</th>\n",
@@ -842,22 +848,32 @@
        "      <td>80</td>\n",
        "      <td>92</td>\n",
        "      <td>71</td>\n",
+       "      <td>Herzelliya</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Motti</th>\n",
+       "      <td>91</td>\n",
+       "      <td>88</td>\n",
+       "      <td>70</td>\n",
+       "      <td>98</td>\n",
+       "      <td>Beer-sheva</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Physics  Math  Chemistry  Biology\n",
-       "Alice        98    88         74       67\n",
-       "Bob          80    98         78       82\n",
-       "Martin       70    70         83       95\n",
-       "Shi          99    83         62       81\n",
-       "Dvir         61    83         89       97\n",
-       "Shlomo       61    80         92       71"
+       "        Physics  Math  Chemistry  Biology        City\n",
+       "Alice        98    88         74       67    Tel-aviv\n",
+       "Bob          80    98         78       82      Rishon\n",
+       "Martin       80    56         99      100      Dimona\n",
+       "Shi          99    83         62       81  Kfar-tavot\n",
+       "Dvir         61    83         89       97    Tel-aviv\n",
+       "Shlomo       61    80         92       71  Herzelliya\n",
+       "Motti        91    88         70       98  Beer-sheva"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +934,437 @@
     "4 add new column city: Tel-aviv, Rishon, Nes-zyiona, Kfar-tavot, Tel-aviv, Herzelliya, Beer-sheva\n",
     "5 replace grades for Martin to: 80, 56, 99, 100, 'Dimona'\n",
     "\n",
-    "'''"
+    "'''\n",
+    "# 1 drop column Math (just print, dont actually remove)\n",
+    "df.drop(columns=[\"Math\"])\n",
+    "\n",
+    "# 2 drop row 'Bob'\n",
+    "df.drop(index='Bob')\n",
+    "        \n",
+    "# 3 add new row : Motti  Physics[91]\tMath[88]\tChemistry[70]\tBiology[98] -- using concat\n",
+    "new_row = pd.DataFrame(data=[[91, 88, 70, 98]], index=[\"Motti\"], columns=[\"Physics\", \"Math\", \"Chemistry\", \"Biology\"])\n",
+    "df = pd.concat([df, new_row])\n",
+    "\n",
+    "# 4 add new column city: Tel-aviv, Rishon, Nes-zyiona, Kfar-tavot, Tel-aviv, Herzelliya, Beer-sheva\n",
+    "new_col = pd.DataFrame(data=[\"Tel-aviv\", \"Rishon\", \"Nes-zyiona\", \"Kfar-tavot\", \"Tel-aviv\", \"Herzelliya\", \"Beer-sheva\"], \n",
+    "                       index=df.index, columns=[\"City\"])\n",
+    "df = pd.concat([df, new_col], axis=1)\n",
+    "\n",
+    "# df['city'] = [\"Tel-aviv\", \"Rishon\", \"Nes-zyiona\", \"Kfar-tavot\", \"Tel-aviv\", \"Herzelliya\", \"Beer-sheva\"]\n",
+    "\n",
+    "# 5 replace grades for Martin to: 80, 56, 99, 100, 'Dimona'\n",
+    "df.loc['Martin'] = [80, 56, 99, 100, 'Dimona']\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "aeb104c0-dc47-4dc9-9661-6230920d670f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32 entries, 0 to 31\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Title         32 non-null     object \n",
+      " 1   Year          29 non-null     float64\n",
+      " 2   Genre         31 non-null     object \n",
+      " 3   Rating        29 non-null     float64\n",
+      " 4   Duration_min  29 non-null     float64\n",
+      "dtypes: float64(3), object(2)\n",
+      "memory usage: 1.4+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Duration_min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Avengers: Endgame</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>181.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Blade Runner 2049</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>164.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fight Club</td>\n",
+       "      <td>1999.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>139.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fight Club</td>\n",
+       "      <td>1999.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Finding Nemo</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Finding Nemo</td>\n",
+       "      <td>2003.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Finding Nemo</td>\n",
+       "      <td>2003.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Finding Nemo</td>\n",
+       "      <td>2003.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Forrest Gump</td>\n",
+       "      <td>1994.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>142.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Gladiator</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>155.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Gladiator</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>155.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Gladiator</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>155.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Gladiator</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>155.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>148.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>148.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Interstellar</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>169.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Mad Max: Fury Road</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Parasite</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>132.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Parasite</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>132.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Parasite</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>132.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Shrek</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Shrek</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Shrek</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Shrek</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Spirited Away</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>125.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>152.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>152.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>The Matrix</td>\n",
+       "      <td>1999.0</td>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>136.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>1994.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>142.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>103.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Title    Year      Genre  Rating  Duration_min\n",
+       "0          Avengers: Endgame  2019.0     Action     8.4         181.0\n",
+       "1          Blade Runner 2049  2017.0     Sci-Fi     8.0         164.0\n",
+       "2                 Fight Club  1999.0      Drama     8.8         139.0\n",
+       "3                 Fight Club  1999.0      Drama     8.8           NaN\n",
+       "4               Finding Nemo     NaN  Animation     8.2         100.0\n",
+       "5               Finding Nemo  2003.0  Animation     8.2         100.0\n",
+       "6               Finding Nemo  2003.0  Animation     8.2         100.0\n",
+       "7               Finding Nemo  2003.0  Animation     8.2         100.0\n",
+       "8               Forrest Gump  1994.0      Drama     8.8         142.0\n",
+       "9                  Gladiator     NaN     Action     8.5         155.0\n",
+       "10                 Gladiator     NaN        NaN     8.5         155.0\n",
+       "11                 Gladiator  2000.0     Action     8.5         155.0\n",
+       "12                 Gladiator  2000.0     Action     8.5         155.0\n",
+       "13                 Inception  2010.0     Sci-Fi     8.8         148.0\n",
+       "14                 Inception  2010.0     Sci-Fi     8.8         148.0\n",
+       "15                 Inception  2010.0     Sci-Fi     8.8           NaN\n",
+       "16              Interstellar  2014.0     Sci-Fi     8.6         169.0\n",
+       "17        Mad Max: Fury Road  2015.0     Action     8.1         120.0\n",
+       "18                  Parasite  2019.0      Drama     8.6         132.0\n",
+       "19                  Parasite  2019.0      Drama     8.6         132.0\n",
+       "20                  Parasite  2019.0      Drama     NaN         132.0\n",
+       "21                     Shrek  2001.0  Animation     7.9          90.0\n",
+       "22                     Shrek  2001.0  Animation     NaN          90.0\n",
+       "23                     Shrek  2001.0  Animation     7.9          90.0\n",
+       "24                     Shrek  2001.0  Animation     7.9          90.0\n",
+       "25             Spirited Away  2001.0  Animation     8.6         125.0\n",
+       "26           The Dark Knight  2008.0     Action     9.0         152.0\n",
+       "27           The Dark Knight  2008.0     Action     NaN         152.0\n",
+       "28                The Matrix  1999.0     Sci-Fi     8.7         136.0\n",
+       "29  The Shawshank Redemption  1994.0      Drama     9.3         142.0\n",
+       "30               Toy Story 3  2010.0  Animation     8.8         103.0\n",
+       "31               Toy Story 3  2010.0  Animation     8.8           NaN"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "# Read a CSV file\n",
+    "penguins = pd.read_csv(\"penguins.csv\")\n",
+    "\n",
+    "# Show the first 5 rows\n",
+    "print(penguins.head())\n",
+    "\n",
+    "# Show the last 5 rows\n",
+    "print(penguins.tail())\n",
+    "\n",
+    "# Get column names\n",
+    "print(penguins.columns)\n",
+    "\n",
+    "# Summary statistics for numeric columns\n",
+    "print(penguins.describe())\n",
+    "\n",
+    "# Get DataFrame info (rows, columns, dtypes, memory)\n",
+    "print(penguins.info())\n",
+    "\n",
+    "penguins.set_index('species', inplace=True)\n",
+    "\n",
+    "penguins.reset_index(inplace=True)\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "# 1 open train_movies.csv\n",
+    "# 2 show 5 first rows\n",
+    "# 3 show 5 last rows\n",
+    "# 4 show info\n",
+    "# 5 show describe\n",
+    "# 6 set index to Title + head\n",
+    "# 7 reset index + head\n",
+    "\n",
+    "df = pd.read_csv(\"train_movies.csv\")\n",
+    "df.head()\n",
+    "df.tail()\n",
+    "df.info()\n",
+    "df.describe().transpose()\n",
+    "\n",
+    "df.set_index('Title', inplace=True)\n",
+    "df.loc['Gladiator']\n",
+    "df.loc['Avengers: Endgame': 'Fight Club']\n",
+    "\n",
+    "df.reset_index(inplace=True)\n",
+    "df\n",
+    "\n",
+    "# sort_values - 1, 2\n",
+    "# groupby\n",
+    "# value_counts\n",
+    "# duplicates - drop_duplicates\n",
+    "# nan\n",
+    "# fillna, dropna\n",
+    "# merge"
    ]
   }
  ],
