--- a/hazara_more.ipynb
+++ b/hazara_more.ipynb
@@ -387,6 +387,24 @@
     "# 2 Drop rows only if they have all values missing.\n",
     "# 3 Drop rows that have fewer than 2 non-null values (thresh=2)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c1fe4bb9-59c4-4083-a40b-ae1b1a203b56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "submit to pythonai200425+hwhazara2@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('submit to pythonai200425+hwhazara2@gmail.com')"
+   ]
   }
  ],
  "metadata": {
